# AW101_WtFoo

./: .clang-format  CMakeLists.txt  README.md
HAL/: CMakeLists.txt
HAL/HAL/: HAL.cpp  HAL.h  HALObject.cpp  HALObject.h
HAL/HAL/HW/: HardwareInput.cpp  HardwareInput.h  HardwareObject.cpp  HardwareObject.h  HardwareOutput.cpp  HardwareOutput.h
HAL/HAL/hall/: WelcomeHall.cpp  WelcomeHall.h
HAL/HAL/modules/: DSPHardwareModule.cpp  DSPHardwareModule.h
Simple-WebSocket-Server/: client_ws.hpp
design/: Roadmap_AW101.odt
examples/FancyModules/: CMakeLists.txt
examples/ModularPlayground/: CMakeLists.txt
examples/ModularPlayground/resources/: dom_helpers.js  modular.css
examples/ModularPlayground/src/: ArgumentParser.cpp  ArgumentParser.h  ModularPlaygroundApplication.cpp  ModularPlaygroundApplication.h  NumberModuleWidget.cpp  NumberModuleWidget.h  SineWaveTable.cpp  SineWaveTable.h  WaveTables.cpp  WaveTables.h  library_loading_ugly_stuff.cpp  main.cpp
examples/ModularPlayground/src/Audio/: ModularAudioDevice.cpp  ModularAudioDevice.h
examples/ModularPlayground/src/AudioAnalizer/: AudioAnalyzer.cpp  AudioAnalyzer.h
examples/ModularPlayground/src/ConsoleUI/: ModularUseCases.cpp  ModularUseCases.h  StreamUI.cpp  StreamUI.h  UseCases.h
examples/ModularPlayground/src/Modules/: AdditionModule.cpp  AdditionModule.h  AudioOutModule.cpp  AudioOutModule.h  BangModule.cpp  BangModule.h  BasicModules.h  ClockModule.cpp  ClockModule.h  Connection.cpp  Connection.h  DrumModule.cpp  DrumModule.h  DuplicationModule.cpp  DuplicationModule.h  MagicNumberModule.cpp  MagicNumberModule.h  MathModule.cpp  MathModule.h  MixerModule.cpp  MixerModule.h  MultiplicationModule.cpp  MultiplicationModule.h  MultiplyModule.cpp  MultiplyModule.h  NegationModule.cpp  NegationModule.h  NumberModule.cpp  NumberModule.h  OscillatorModule.cpp  OscillatorModule.h  RampModule.cpp  RampModule.h  SawOscillatorModule.cpp  SawOscillatorModule.h  SineOscillatorModule.cpp  SineOscillatorModule.h  WaveTableOscillator.cpp  WaveTableOscillator.h
examples/ModularPlayground/src/Modules/sampler/: SamplePlayerModule.cpp  SamplePlayerModule.h
examples/ModularPlayground/src/WebUI/: CMakeLists.txt  ModularWebUI.cpp  ModularWebUI.h  PlaygroundToolboxWidget.cpp  ViewPortWidget.cpp  WireOverlayWidget.cpp  WireOverlayWidget.h
examples/ModularPlayground/src/WebUI/GenericWidgets/: DragWidget.h  DropWidget.h  ParameterSlider.cpp  ParameterSlider.h  SliderWithLabel.cpp  SliderWithLabel.h  WidgetDOMSizeProxy.cpp  WidgetDOMSizeProxy.h
examples/ModularPlayground/src/WebUI/ModuleWidgets/: BangButtonModuleWidget.cpp  DrumModuleWidget.cpp  MagicNumberModuleWidget.cpp  MagicNumberModuleWidget.h  ModuleContainer.cpp  ModuleContainer.h  ModuleWidget.cpp  ModuleWidget.h  SineOscillatorModuleWidget.cpp  SineOscillatorModuleWidget.h
examples/ModularPlayground/src/WebUI/NodeWidgets/: DSPInputWidget.cpp  DSPInputWidget.h  DSPOutputWidget.h
examples/ModularPlayground/src/WebUI/src/: ModularWebUI.cpp  ModularWebUI.h  PlaygroundToolboxWidget.cpp  PlaygroundToolboxWidget.h  ViewPortWidget.h  WireOverlayWidget.h
examples/ModularPlayground/src/WebUI/src/ModuleWidgets/: BangButtonModuleWidget.h  ModuleContainer.cpp  ModuleContainer.h  ModuleWidget.cpp  ModuleWidget.h
examples/ModularPlayground/src/WebUI/src/NodeWidgets/: DSPInputWidget.cpp  DSPInputWidget.h  DSPOutputWidget.cpp  DSPOutputWidget.h
examples/WebUI/: CMakeLists.txt
examples/schlenkibus-instruments/: CMakeLists.txt
examples/schlenkibus-instruments/src/: AudioStorage.cpp  AudioStorage.h  ButtonModule.cpp  ButtonModule.h  ButtonModuleWidget.cpp  ButtonModuleWidget.h  PlayerPlayer.cpp  PlayerPlayer.h  PlayerPlayerWidget.cpp  PlayerPlayerWidget.h  SoundFile.h  schlenki-instruments.cpp
firmware/IODevice/: CMakeLists.txt
firmware/IODevice/src/: IODevice.cpp  IODevice.h  installer.cpp
libAudio/: CMakeLists.txt  libAudio.pc.in
libAudio/libAudio/: AudioDevice.cpp  AudioDevice.h  Frame.cpp  Frame.h  PortAudioDevice.cpp
libAudio/libAudio/include/: AudioDevice.h  PortAudioDevice.h  libAudio.h
libAudio/libAudio/src/: AudioDevice.cpp  Frame.cpp  PortAudioDevice.cpp
libDSP/: CMakeLists.txt  libDSP.pc.in
libDSP/libDSP/: DSPInfo.h  libDSP.h
libDSP/libDSP/DSPNodes/: DSPContainer.cpp  DSPContainer.h  DSPInputNode.h  DSPNode.h  DSPOutputNode.h
libDSP/libDSP/Modules/: DSPModule.cpp  DSPModule.h
libDSP/libDSP/include/: DSPHost.h  libDSP.h
libDSP/libDSP/include/DSPNodes/: DSPContainer.h  DSPInputNode.h  DSPNode.h  DSPOutputNode.h
libDSP/libDSP/include/Modules/: DSPModule.h  Input.h  Output.h  Parameter.h
libDSP/libDSP/include/UUID/: UUID.h
libDSP/libDSP/include/misc/: Countdown.h  FacadeVector.h  RingBuffer.h  Semaphore.h
libDSP/libDSP/include/plugin/: PluginLoader.h
libDSP/libDSP/misc/: Countdown.h
libDSP/libDSP/src/: DSPHost.cpp
libDSP/libDSP/src/DSPNodes/: DSPContainer.cpp  DSPInputNode.cpp  DSPNode.cpp  DSPOutputNode.cpp
libDSP/libDSP/src/Modules/: DSPModule.cpp  Input.cpp  Output.cpp  Parameter.cpp
libDSP/libDSP/src/UUID/: UUID.cpp
libDSP/libDSP/src/misc/: Countdown.cpp  RingBuffer.cpp
libDSP/libDSP/src/plugin/: PluginLoader.cpp
libDSP/tests/: libDSPTests.cpp
libDSP/tests/src/: MockedModules.h  TestHelper.h  dsphost_tests.cpp  libDSPTests.cpp
libFilesystem/: CMakeLists.txt  libFilesystem.pc.in
libFilesystem/libFilesystem/include/: Directory.h  File.h  FileExplorer.h  FileTools.h  Path.h  libFilesystem.h
libFilesystem/libFilesystem/src/: Directory.cpp  File.cpp  FileExplorer.cpp  FileTools.cpp  Path.cpp
resources/: mixer.css  modular.css
src/: Defines.h  SynthApplication.cpp  SynthApplication.h  main.cpp
src/Audio/: AudioDevice.cpp  AudioDevice.h  PortAudioDevice.cpp  PortAudioDevice.h
src/DSPNodes/: DPSMixerNode.cpp  DPSMixerNode.h  DSPClock.cpp  DSPClock.h  DSPCollection.cpp  DSPCollection.h  DSPContainer.cpp  DSPContainer.h  DSPInput.cpp  DSPInput.h  DSPInputNode.cpp  DSPInputNode.h  DSPMixerNode.cpp  DSPMixerNode.h  DSPNode.cpp  DSPNode.h  DSPOutputNode.cpp
visual-experiments/: CMakeLists.txt  Readme.md
(+195 files in other folders)
